--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <!-- Load sketch file last, needs pattern files loaded first -->
     <script src="sketch.js"></script>
     </script>
