--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <!-- Load sketch file last, needs pattern files loaded first -->
+    <script src="blip.js"></script>
     <script src="sketch.js"></script>
     </script>
     <title>IMAGE TEST</title>
